:bug: fix the sidebar's z-index

--- a/public/assets/style/sass/navbar.scss
+++ b/public/assets/style/sass/navbar.scss
@@ -109,6 +109,7 @@ $x-width: $hamburger-height * 1.41421356237;
   max-width: 12rem;
   min-height: 100dvh;
   position: fixed;
+  z-index: 1;
 }
 
 .hamburger-menu:has(input:checked) + .sidebar
